# llm-council

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  config.json  mcp_servers.json  pyproject.toml  start.sh
backend/: analysis.py  config.py  config_loader.py  council.py  leaderboard.py  llm_client.py  lmstudio.py  main.py  memory_service.py  model_metrics.py  openrouter.py  research_controller.py  search.py  storage.py  tool_orchestration.py
backend/council/: __init__.py  ranking.py  routing.py  stage1.py  stage2.py  stage3.py  utils.py
backend/mcp/: __init__.py  client.py  registry.py
backend/providers/: __init__.py  base.py  groq_provider.py  ollama_provider.py  openai_compat_provider.py  openrouter_provider.py
config/: models.yaml
config/councils/: downeast.yaml  personal.yaml  protocol.yaml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ErrorBoundary.jsx  api.js  index.css
mcp_servers/: http_wrapper.py
mcp_servers/calculator/: __init__.py  server.py
mcp_servers/firecrawl/: __init__.py  server.py
mcp_servers/graphiti-custom/: Dockerfile  README.md  config.yaml  factories.patch  graphiti_config.json  lmstudio_client.py  schema.patch  start.sh
mcp_servers/location_time/: __init__.py  server.py
mcp_servers/software_dev_org/: __init__.py  server.py
mcp_servers/system_date_time/: __init__.py  server.py
mcp_servers/system_geo_location/: __init__.py  server.py
openspec/: AGENTS.md
scripts/: remove_hermes_nodes.py
tests/: scenarios.json  test_graphiti.py  test_runner.py
(+67 files in other folders)
